--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S101", "D", "ANN", "ARG", "PLC0415", "SLF001", "PLR2004"]
+"tests/*" = ["S101", "D", "ANN", "ARG", "PLC0415", "SLF001", "PLR2004", "FBT"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
